Refactor add passkey and add password into pages

--- a/server/core/templates/credentials_reset.html
+++ b/server/core/templates/credentials_reset.html
@@ -7,5 +7,14 @@
 (% endblock %)
 
 (% block body %)
-(( credentials_update_partial|safe ))
+<div class="d-flex align-items-start form-cred-reset-body">
+    <main class="w-100">
+        <div class="py-3 text-center">
+            <h3>Updating Credentials</h3>
+            <p>(( names ))</p>
+            <p>(( domain ))</p>
+        </div>
+        (( credentials_update_partial|safe ))
+    </main>
+</div>
 (% endblock %)
