--- a/server/core/templates/credentials_update_partial.html
+++ b/server/core/templates/credentials_update_partial.html
@@ -1,117 +1,100 @@
-<div class="d-flex align-items-start form-cred-reset-body">
-    <main class="w-100">
-        <div class="py-3 text-center">
-            <h3>Updating Credentials</h3>
-            <p>(( names ))</p>
-            <p>(( domain ))</p>
-        </div>
-
-        <div class="row g-3" id="credentialUpdateDynamicSection">
-            <form class="needs-validation" novalidate>
-                (% match ext_cred_portal %)
-                    (% when CUExtPortal::None %)
-                    (% when CUExtPortal::Hidden %)
-                        <hr class="my-4" />
-                        <p>This account is externally managed. Some features may not be available.</p>
-                    (% when CUExtPortal::Some(url) %)
-                        <hr class="my-4" />
-                        <p>This account is externally managed. Some features may not be available.</p>
-                        <a href="(( url ))">Visit the external account portal</a>
-                (% endmatch %)
-
-                (% if warnings.len() > 0 %)
-                    <hr class="my-4" >
-                    (% for warning in warnings %)
-                        (% let is_danger = [CURegWarning::WebauthnAttestationUnsatisfiable, CURegWarning::Unsatisfiable].contains(warning) %)
-
-                        (% if is_danger -%)
-                            <div class="alert alert-danger" role="alert">
-                        (% else -%)
-                            <div class="alert alert-warning" role="alert">
-                        (% endif %)
-
-                        (% match warning %)
-                            (% when CURegWarning::MfaRequired %)
-                                Multi-Factor Authentication is required for your account. Either add TOTP or remove your password in favour of passkeys to submit.
-                            (% when CURegWarning::PasskeyRequired %)
-                                Passkeys are required for your account.
-                            (% when CURegWarning::AttestedPasskeyRequired %)
-                                Attested Passkeys are required for your account.
-                            (% when CURegWarning::AttestedResidentKeyRequired %)
-                                Attested Resident Keys are required for your account.
-                            (% when CURegWarning::WebauthnAttestationUnsatisfiable %)
-                                A webauthn attestation policy conflict has occurred and you will not be able to save your credentials
-                            (% when CURegWarning::Unsatisfiable %)
-                                An account policy conflict has occurred and you will not be able to save your credentials
-                        (% endmatch %)
-
-                        (% if is_danger %)
-                            <br><br>
-                            <b>Contact support IMMEDIATELY.</b>
-                        (% endif %)
-                        </div>
-                    (% endfor %)
-                (% endif %)
-
-                <!-- Attested Passkeys -->
-                (% match attested_passkeys_state %)
-                    (% when CUCredState::Modifiable %)
-                        (% include "credentials_update_attested_passkeys.html" %)
-                        <!-- TODO: add attested passkey modal -->
-                    (% when CUCredState::DeleteOnly %)
-                        (% include "credentials_update_attested_passkeys.html" %)
-                    (% when CUCredState::AccessDeny %)
-                    (% when CUCredState::PolicyDeny %)
-                (% endmatch %)
-
-                <!-- Passkeys -->
-                (% match passkeys_state %)
-                    (% when CUCredState::Modifiable %)
-                        (% include "credentials_update_passkeys.html" %)
-                        <!-- Here we are modifiable so we can render the button and addPasskey modal  -->
-                        (% let passkey_state = PassKeyState::Init %)
-                        (% include "cred_update/add_passkey_modal_partial.html" %)
-                    (% when CUCredState::DeleteOnly %)
-                        (% include "credentials_update_passkeys.html" %)
-                    (% when CUCredState::AccessDeny %)
-                    (% when CUCredState::PolicyDeny %)
-                (% endmatch %)
-
-                <!-- Password, totp credentials -->
-                (% let primary_state = primary_state %)
-                (% include "credentials_update_primary.html" %)
-
+<div class="row g-3" id="credentialUpdateDynamicSection" hx-on::before-swap="stillSwapFailureResponse(event)">
+    <form class="needs-validation" novalidate>
+        (% match ext_cred_portal %)
+            (% when CUExtPortal::None %)
+            (% when CUExtPortal::Hidden %)
                 <hr class="my-4" />
+                <p>This account is externally managed. Some features may not be available.</p>
+            (% when CUExtPortal::Some(url) %)
+                <hr class="my-4" />
+                <p>This account is externally managed. Some features may not be available.</p>
+                <a href="(( url ))">Visit the external account portal</a>
+        (% endmatch %)
 
-                <button class="w-50 btn btn-danger btn-lg"
-                        disabled=false>Cancel</button>
-                <button
-                        class="w-50 btn btn-success btn-lg"
-                        disabled="!can_commit"
-                        type="submit">Submit Changes</button>
-            </form>
+        (% if warnings.len() > 0 %)
+            <hr class="my-4" >
+            (% for warning in warnings %)
+                (% let is_danger = [CURegWarning::WebauthnAttestationUnsatisfiable, CURegWarning::Unsatisfiable].contains(warning) %)
 
-            <div class="modal fade" id="staticDeletePrimaryCred" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticDeletePrimaryCred" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="staticDeletePrimaryCredLabel">Delete Credential</h5>
-                            <button type="button" class="btn-close" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <p>Delete your Password and any associated MFA?</p>
-                            <p><strong>Note:</strong>this will not remove Passkeys.</p>
-                        </div>
-                        <div class="modal-footer">
-                            <button id="delete-cancel" type="button" class="btn btn-secondary">Cancel</button>
-                            <button id="delete-submit" type="button" class="btn btn-danger">Submit</button>
-                        </div>
-                    </div>
+                <div class='alert alert-(( is_danger|ternary("danger", "warning") ))' role="alert">
+                (% match warning %)
+                    (% when CURegWarning::MfaRequired %)
+                        Multi-Factor Authentication is required for your account. Either add TOTP or remove your password in favour of passkeys to submit.
+                    (% when CURegWarning::PasskeyRequired %)
+                        Passkeys are required for your account.
+                    (% when CURegWarning::AttestedPasskeyRequired %)
+                        Attested Passkeys are required for your account.
+                    (% when CURegWarning::AttestedResidentKeyRequired %)
+                        Attested Resident Keys are required for your account.
+                    (% when CURegWarning::WebauthnAttestationUnsatisfiable %)
+                        A webauthn attestation policy conflict has occurred and you will not be able to save your credentials
+                    (% when CURegWarning::Unsatisfiable %)
+                        An account policy conflict has occurred and you will not be able to save your credentials
+                (% endmatch %)
+
+                (% if is_danger %)
+                    <br><br>
+                    <b>Contact support IMMEDIATELY.</b>
+                (% endif %)
+                </div>
+            (% endfor %)
+        (% endif %)
+
+        <!-- Attested Passkeys -->
+        (% match attested_passkeys_state %)
+            (% when CUCredState::Modifiable %)
+                (% include "credentials_update_attested_passkeys.html" %)
+                <!-- TODO: add attested passkey modal -->
+            (% when CUCredState::DeleteOnly %)
+                (% include "credentials_update_attested_passkeys.html" %)
+            (% when CUCredState::AccessDeny %)
+            (% when CUCredState::PolicyDeny %)
+        (% endmatch %)
+
+        <!-- Passkeys -->
+        (% match passkeys_state %)
+            (% when CUCredState::Modifiable %)
+                (% include "credentials_update_passkeys.html" %)
+                <!-- Here we are modifiable so we can render the button and addPasskey modal  -->
+                <button type="button" class="btn btn-primary" hx-post="/ui/reset/add_passkey" hx-target="#credentialUpdateDynamicSection" hx-on::after-request="setupInteractivePwdFormListeners()">
+                    Add Passkey
+                </button>
+            (% when CUCredState::DeleteOnly %)
+                (% include "credentials_update_passkeys.html" %)
+            (% when CUCredState::AccessDeny %)
+            (% when CUCredState::PolicyDeny %)/
+        (% endmatch %)
+
+        <!-- Password, totp credentials -->
+        (% let primary_state = primary_state %)
+        (% include "credentials_update_primary.html" %)
+
+        <hr class="my-4" />
+
+        <button class="w-50 btn btn-danger btn-lg"
+                disabled=false>Cancel</button>
+        <button
+                class="w-50 btn btn-success btn-lg"
+                disabled="!can_commit"
+                type="submit">Submit Changes</button>
+    </form>
+
+    <div class="modal fade" id="staticDeletePrimaryCred" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticDeletePrimaryCred" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticDeletePrimaryCredLabel">Delete Credential</h5>
+                    <button type="button" class="btn-close" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Delete your Password and any associated MFA?</p>
+                    <p><strong>Note:</strong>this will not remove Passkeys.</p>
+                </div>
+                <div class="modal-footer">
+                    <button id="delete-cancel" type="button" class="btn btn-secondary">Cancel</button>
+                    <button id="delete-submit" type="button" class="btn btn-danger">Submit</button>
                 </div>
             </div>
-            <!-- Today we infer types by assigning a value to do full inference on and then assigning the value I wanted :) -->
-            (% let check_res = PwdCheckResult::Init %)
-            (% include "cred_update/add_password_modal_partial.html" %)
         </div>
-    </main>
+    </div>
 </div>
