--- a/server/core/templates/credentials_update_passkeys.html
+++ b/server/core/templates/credentials_update_passkeys.html
@@ -28,13 +28,12 @@
                     <button type="button" class="btn-close" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>msg</p>
+                    <p>Are you sure you want to remove: (( passkey.tag ))</p>
                 </div>
                 <div class="modal-footer">
                     <button id="delete-passkey-cancel" type="button" class="btn btn-secondary">Cancel</button>
-                    <!-- TODO: Devise new means to do the disabling of buttons like this, maybe a macro :think: -->
                     <button id="delete-passkey-submit" type="button" class="btn btn-danger"
-                            disabled="!submit_enabled">Submit</button>
+                            hx-post="/ui/api/remove_passkey" hx-vals="{'uuid': '(( passkey.uuid ))'}">Submit</button>
                 </div>
             </div>
         </div>
