--- a/server/core/templates/credentials_update_primary.html
+++ b/server/core/templates/credentials_update_primary.html
@@ -57,7 +57,7 @@
                 Delete Alternative Credentials
             </button>
         (% when None %)
-            <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#staticPassword">
+            <button type="button" class="btn btn-warning" hx-post="/ui/reset/add_password" hx-target="#credentialUpdateDynamicSection" hx-on::after-request="setupInteractivePwdFormListeners()">
                 Add Password
             </button>
     (% endmatch %)
@@ -101,4 +101,3 @@
 <!--}-->
 <!--}-->
 <!--};-->
-<!--TODO: <PwModalApp token={ token.clone() } cb={ cb } />-->
