Working passkey remove buttons

--- a/server/core/templates/credentials_update_passkeys.html
+++ b/server/core/templates/credentials_update_passkeys.html
@@ -25,15 +25,16 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="(( remove_label ))">Delete Passkey</h5>
-                    <button type="button" class="btn-close" aria-label="Close"></button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <p>Are you sure you want to remove: (( passkey.tag ))</p>
                 </div>
                 <div class="modal-footer">
-                    <button id="delete-passkey-cancel" type="button" class="btn btn-secondary">Cancel</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                     <button id="delete-passkey-submit" type="button" class="btn btn-danger"
-                            hx-post="/ui/api/remove_passkey" hx-vals="{'uuid': '(( passkey.uuid ))'}">Submit</button>
+                            hx-target="#credentialUpdateDynamicSection"
+                            hx-post="/ui/api/remove_passkey" hx-vals='{"uuid": "(( passkey.uuid ))"}'>Submit</button>
                 </div>
             </div>
         </div>
