--- a/server/core/templates/credentials_update_partial.html
+++ b/server/core/templates/credentials_update_partial.html
@@ -1,4 +1,4 @@
-<div class="row g-3" id="credentialUpdateDynamicSection" hx-on::before-swap="stillSwapFailureResponse(event)">
+<div class="row g-3" id="credentialUpdateDynamicSection" hx-on::before-swap="stillSwapFailureResponse(event)" hx-on::after-request="nukeModalBackdrop()">
     <form class="needs-validation" novalidate>
         (% match ext_cred_portal %)
             (% when CUExtPortal::None %)
