Use builtin browser modal

--- a/server/core/templates/credentials_update_passkeys.html
+++ b/server/core/templates/credentials_update_passkeys.html
@@ -15,28 +15,12 @@
     <div class="row mb-3">
         <div class="col">(( passkey.tag ))</div>
         <div class="col">
-            <button type="button" class="btn btn-dark btn-sml" id="(( passkey.tag ))" data-bs-toggle="modal" data-bs-target="(( remove_tgt ))" >
+            <button type="button" class="btn btn-danger btn-sml" id="(( passkey.tag ))"
+                    hx-target="#credentialUpdateDynamicSection"
+                    hx-confirm="Are you sure you want to delete passkey (( passkey.tag )) ?"
+                    hx-post="/ui/api/remove_passkey" hx-vals='{"uuid": "(( passkey.uuid ))"}'>
                 Remove
             </button>
-        </div>
-    </div>
-    <div class="modal fade" id="(( remove_id ))" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="(( remove_tgt ))" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="(( remove_label ))">Delete Passkey</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <p>Are you sure you want to remove: (( passkey.tag ))</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button id="delete-passkey-submit" type="button" class="btn btn-danger"
-                            hx-target="#credentialUpdateDynamicSection"
-                            hx-post="/ui/api/remove_passkey" hx-vals='{"uuid": "(( passkey.uuid ))"}'>Submit</button>
-                </div>
-            </div>
         </div>
     </div>
 (% endfor %)
