--- a/server/core/templates/cred_update/add_passkey_partial.html
+++ b/server/core/templates/cred_update/add_passkey_partial.html
@@ -13,7 +13,7 @@
             <input hidden type="text" name="creationData" id="passkey-create-data">
 
             <div class="d-flex justify-content-end pt-3 g-3" hx-target="#credentialUpdateDynamicSection">
-                <button id="password-cancel" type="button" class="btn btn-danger" hx-get="/ui/api/cancel_mfareg">Cancel</button>
+                <button id="password-cancel" type="button" class="btn btn-danger" hx-post="/ui/api/cancel_mfareg">Cancel</button>
                 <button
                         hx-post="/ui/api/finish_passkey"
                         id="passkeyNamingSubmitBtn"
