Fixing functionality here and there, adds attested passkeys (but I fail to set a group policy so its not tested)

--- a/server/core/templates/cred_update/add_passkey_partial.html
+++ b/server/core/templates/cred_update/add_passkey_partial.html
@@ -16,6 +16,7 @@
                 <button id="password-cancel" type="button" class="btn btn-danger" hx-post="/ui/api/cancel_mfareg">Cancel</button>
                 <button
                         hx-post="/ui/api/finish_passkey"
+                        hx-vals='{"class": "(( class ))"}'
                         id="passkeyNamingSubmitBtn"
                         type="button" class="btn btn-success d-none ms-2" disabled
                 >Submit</button>
