--- a/server/core/templates/credentials_update_partial.html
+++ b/server/core/templates/credentials_update_partial.html
@@ -44,9 +44,13 @@
         (% match attested_passkeys_state %)
             (% when CUCredState::Modifiable %)
                 (% include "credentials_update_attested_passkeys.html" %)
-                <!-- TODO: add attested passkey modal -->
+                <button type="button" class="btn btn-primary" hx-post="/ui/reset/add_passkey" hx-vals='{"class": "Attested"}' hx-target="#credentialUpdateDynamicSection">
+                    Add Attested Passkey
+                </button>
             (% when CUCredState::DeleteOnly %)
-                (% include "credentials_update_attested_passkeys.html" %)
+                (% if attested_passkeys.len() > 0 %)
+                    (% include "credentials_update_attested_passkeys.html" %)
+                (% endif %)
             (% when CUCredState::AccessDeny %)
             (% when CUCredState::PolicyDeny %)
         (% endmatch %)
@@ -55,12 +59,14 @@
         (% match passkeys_state %)
             (% when CUCredState::Modifiable %)
                 (% include "credentials_update_passkeys.html" %)
-                <!-- Here we are modifiable so we can render the button and addPasskey modal  -->
-                <button type="button" class="btn btn-primary" hx-post="/ui/reset/add_passkey" hx-target="#credentialUpdateDynamicSection" hx-on::after-request="setupInteractivePwdFormListeners()">
+                <!-- Here we are modifiable so we can render the button to add passkeys  -->
+                <button type="button" class="btn btn-primary" hx-post="/ui/reset/add_passkey" hx-vals='{"class": "Any"}' hx-target="#credentialUpdateDynamicSection">
                     Add Passkey
                 </button>
             (% when CUCredState::DeleteOnly %)
-                (% include "credentials_update_passkeys.html" %)
+                (% if passkeys.len() > 0 %)
+                    (% include "credentials_update_passkeys.html" %)
+                (% endif %)
             (% when CUCredState::AccessDeny %)
             (% when CUCredState::PolicyDeny %)/
         (% endmatch %)
@@ -71,30 +77,12 @@
 
         <hr class="my-4" />
 
-        <button class="w-50 btn btn-danger btn-lg"
-                disabled=false>Cancel</button>
+        <button class="w-50 btn btn-danger btn-lg" hx-post="/ui/api/cu_cancel">Cancel</button>
         <button
                 class="w-50 btn btn-success btn-lg"
-                disabled="!can_commit"
-                type="submit">Submit Changes</button>
+                type="submit"
+                disabled='(( "disabled"|blank_if(warnings.len() == 0) ))'
+                hx-post="/ui/api/cu_commit"
+        >Submit Changes</button>
     </form>
-
-    <div class="modal fade" id="staticDeletePrimaryCred" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticDeletePrimaryCred" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="staticDeletePrimaryCredLabel">Delete Credential</h5>
-                    <button type="button" class="btn-close" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <p>Delete your Password and any associated MFA?</p>
-                    <p><strong>Note:</strong>this will not remove Passkeys.</p>
-                </div>
-                <div class="modal-footer">
-                    <button id="delete-cancel" type="button" class="btn btn-secondary">Cancel</button>
-                    <button id="delete-submit" type="button" class="btn btn-danger">Submit</button>
-                </div>
-            </div>
-        </div>
-    </div>
 </div>
