--- a/server/core/templates/credentials_update_primary.html
+++ b/server/core/templates/credentials_update_primary.html
@@ -34,7 +34,9 @@
                 <h6><b>Time-based One Time Password (TOTP)</b></h6>
                 <p>TOTPs are 6 digit codes generated on-demand as a second authentication factor.</p>
                 (% for totp in totp_set %)
-                    <button>TODO: Remove totp (( totp ))</button>
+                    <button type="button" class="btn btn-warning" hx-post="/ui/reset/delete_totp" hx-vals='{"name": (( totp ))}'>
+                        Remove totp (( totp ))
+                    </button>
                 (% endfor %)
 
                 <p>
