Fixing functionality here and there

--- a/server/core/templates/credentials_reset_form.html
+++ b/server/core/templates/credentials_reset_form.html
@@ -3,33 +3,35 @@
 (% block title %)Reset Credentials(% endblock %)
 
 (% block body %)
-<main class="flex-shrink-0 form-signin">
+<main class="flex-shrink-0 container">
     <center>
         <img src="/pkg/img/logo-square.svg" alt="Kanidm" class="kanidm_logo"/>
         <h2>Credential Reset</h2>
         <h3>(( domain ))</h3>
     </center>
-    <form>
-        <p class="text-center">
+    <form class="mb-3">
+        <div>
             <label for="token" class="form-label">Enter your credential reset token.</label>
             <input
                     id="token"
                     name="token"
                     autofocus
-                    type="text"
-                    class="form-control"
-                    value=""
-            />
-        </p>
-        <p class="text-center">
-            <button type="submit" class="btn btn-primary">Submit</button>
-            <br/>
-        </p>
+                    aria-describedby="unknown-reset-token-validation-feedback"
+                    class='form-control (( "is-invalid"|blank_iff(!wrong_code) ))'
+            >
+        (% if wrong_code %)
+            <div id="unknown-reset-token-validation-feedback" class="invalid-feedback">
+                <ul><li>Unknown reset token.<br>Brand-new tokens might not be synced yet, <br>wait a few minutes before trying again.</li></ul>
+            </div>
+        (% endif %)
+        </div>
     </form>
-    <p class="text-center">
-        <a href="/ui/apps">
-            <button class="btn btn-secondary" aria-label="Return home">Return to the home page</button>
-        </a>
+    <p class="d-flex flex-row flex-wrap justify-content-between">
+        <button class="btn btn-secondary" aria-label="Return home"
+                hx-get="/ui/apps" hx-target="body" hx-select="body" hx-swap="outerHTML">
+            Return to the home page
+        </button>
+        <button class="btn btn-primary" hx-get="/ui/reset" hx-include="#token" hx-target="body" hx-select="body" hx-swap="outerHTML" type="submit" >Submit</button>
     </p>
 </main>
 (% endblock %)
