--- a/server/core/templates/credentials_update_partial.html
+++ b/server/core/templates/credentials_update_partial.html
@@ -60,9 +60,21 @@
             (% when CUCredState::Modifiable %)
                 (% include "credentials_update_passkeys.html" %)
                 <!-- Here we are modifiable so we can render the button to add passkeys  -->
-                <button type="button" class="btn btn-primary" hx-post="/ui/reset/add_passkey" hx-vals='{"class": "Any"}' hx-target="#credentialUpdateDynamicSection">
-                    Add Passkey
-                </button>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-primary" hx-post="/ui/reset/add_passkey"
+                                hx-vals='{"class": "Any"}'
+                                hx-target="#credentialUpdateDynamicSection">
+                            Add Passkey
+                        </button>
+                        <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                            <span class="visually-hidden">Toggle Dropdown</span>
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" hx-post="/ui/api/cancel_mfareg" hx-swap="none">Cancel MFA Registration session</a></li>
+                        </ul>
+                    </div>
+
+
             (% when CUCredState::DeleteOnly %)
                 (% if passkeys.len() > 0 %)
                     (% include "credentials_update_passkeys.html" %)
@@ -75,14 +87,20 @@
         (% let primary_state = primary_state %)
         (% include "credentials_update_primary.html" %)
 
-        <hr class="my-4" />
+        <hr class="my-4"/>
 
-        <button class="w-50 btn btn-danger btn-lg" hx-post="/ui/api/cu_cancel">Cancel</button>
-        <button
-                class="w-50 btn btn-success btn-lg"
-                type="submit"
-                disabled='(( "disabled"|blank_if(warnings.len() == 0) ))'
-                hx-post="/ui/api/cu_commit"
-        >Submit Changes</button>
+        <div class="d-flex flex-row flex-wrap justify-content-between">
+            <button class="btn btn-danger btn-lg" hx-post="/ui/api/cu_cancel">Cancel</button>
+            <span class="d-inline-block" tabindex="0" data-bs-toggle="tooltip" data-bs-title="Resolve the warnings at the top.">
+                <button
+                        class="btn btn-success btn-lg"
+                        type="submit"
+                        disabled='(( "disabled"|blank_if(warnings.len() == 0) ))'
+                        hx-post="/ui/api/cu_commit"
+                        hx-boost="false"
+                >Submit Changes</button>
+            </span>
+        </div>
+
     </form>
 </div>
