--- a/server/core/templates/credentials_reset_form.html
+++ b/server/core/templates/credentials_reset_form.html
@@ -3,7 +3,7 @@
 (% block title %)Reset Credentials(% endblock %)
 
 (% block body %)
-<main class="flex-shrink-0 container">
+<main class="flex-shrink-0 container form-signin">
     <center>
         <img src="/pkg/img/logo-square.svg" alt="Kanidm" class="kanidm_logo"/>
         <h2>Credential Reset</h2>
