--- a/server/core/templates/credentials_update_partial.html
+++ b/server/core/templates/credentials_update_partial.html
@@ -95,12 +95,11 @@
                 <button
                         class="btn btn-success btn-lg"
                         type="submit"
-                        disabled='(( "disabled"|blank_if(warnings.len() == 0) ))'
                         hx-post="/ui/api/cu_commit"
                         hx-boost="false"
+                        (( "disabled"|blank_if(warnings.len() == 0) ))
                 >Submit Changes</button>
             </span>
         </div>
-
     </form>
 </div>
