--- a/server/core/templates/credentials_update_primary.html
+++ b/server/core/templates/credentials_update_primary.html
@@ -2,6 +2,20 @@
     <hr class="my-4" />
     <h4>Alternative Authentication Methods</h4>
 
+    <p>
+        (% match primary_state %)
+            (% when CUCredState::Modifiable %)
+                If possible, passkeys should be used instead, as they are phishing and exploit resistant.
+            (% when CUCredState::DeleteOnly %)
+                If possible, passkeys should be used instead, as they are phishing and exploit resistant.
+                <br>Account policy prevents you modifying these credentials, but you may remove them.
+            (% when CUCredState::AccessDeny %)
+                You do not have access to modify these credentials.
+            (% when CUCredState::PolicyDeny %)
+                Account policy prevents you from setting these credentials
+        (% endmatch %)
+    </p>
+
     (% if matches!(primary_state, CUCredState::Modifiable) %)
         (% match primary %)
             (% when Some(CredentialDetail { uuid, type_: kanidm_proto::internal::CredentialDetailType::Password }) %)
@@ -34,7 +48,7 @@
                 <h6><b>Time-based One Time Password (TOTP)</b></h6>
                 <p>TOTPs are 6 digit codes generated on-demand as a second authentication factor.</p>
                 (% for totp in totp_set %)
-                    <button type="button" class="btn btn-warning" hx-post="/ui/reset/delete_totp" hx-vals='{"name": (( totp ))}'>
+                    <button type="button" class="btn btn-warning" hx-post="/ui/api/remove_totp" hx-vals='{"name": "(( totp ))"}'>
                         Remove totp (( totp ))
                     </button>
                 (% endfor %)
@@ -74,34 +88,3 @@
         </p>
     (% endif %)
 </div>
-<!--let alt_auth_method_warning = match primary_state {-->
-<!--CUCredState::Modifiable => {-->
-<!--html! {-->
-<!--<>-->
-<!--<p>If possible, passkeys should be used instead, as they are phishing and exploit resistant.</p>-->
-<!--</>-->
-<!--}-->
-<!--}-->
-<!--CUCredState::DeleteOnly => {-->
-<!--html! {-->
-<!--<>-->
-<!--<p>If possible, passkeys should be used instead, as they are phishing and exploit resistant.</p>-->
-<!--<p>Account policy prevents you modifying these credentials, but you may remove them.</p>-->
-<!--</>-->
-<!--}-->
-<!--}-->
-<!--CUCredState::AccessDeny => {-->
-<!--html! {-->
-<!--<>-->
-<!--<p>You do not have access to modify these credentials.</p>-->
-<!--</>-->
-<!--}-->
-<!--}-->
-<!--CUCredState::PolicyDeny => {-->
-<!--html! {-->
-<!--<>-->
-<!--<p>Account policy prevents you from setting these credentials</p>-->
-<!--</>-->
-<!--}-->
-<!--}-->
-<!--};-->
