--- a/server/core/templates/credentials_update_passkeys.html
+++ b/server/core/templates/credentials_update_passkeys.html
@@ -10,8 +10,8 @@
 </p>
 (% for passkey in passkeys %)
     <div class="row mb-3">
-        <div class="col">(( passkey.tag ))</div>
-        <div class="col">
+        <div class="col d-flex align-items-center"><span>(( passkey.tag ))</span></div>
+        <div class="col d-flex justify-content-end">
             <button type="button" class="btn btn-danger btn-sml" id="(( passkey.tag ))"
                     hx-target="#credentialUpdateDynamicSection"
                     hx-confirm="Are you sure you want to delete passkey (( passkey.tag )) ?"
