--- a/server/core/templates/credentials_update_partial.html
+++ b/server/core/templates/credentials_update_partial.html
@@ -80,7 +80,7 @@
                     (% include "credentials_update_passkeys.html" %)
                 (% endif %)
             (% when CUCredState::AccessDeny %)
-            (% when CUCredState::PolicyDeny %)/
+            (% when CUCredState::PolicyDeny %)
         (% endmatch %)
 
         <!-- Password, totp credentials -->
