--- a/server/core/templates/cred_update/add_passkey_partial.html
+++ b/server/core/templates/cred_update/add_passkey_partial.html
@@ -3,7 +3,7 @@
         <script id="data">(( challenge|safe ))</script>
 
         <!-- Safari requires a human input to start passkey creation -->
-        <button id="passkeyNamingSafariBtn" class="btn btn-primary">Begin Passkey Enrollment</button>
+        <button id="passkeyNamingSafariBtn" class="btn btn-primary">Begin Passkey Enrolment</button>
 
         <form id="passkeyNamingForm" class="g-2 d-none">
             <label for="passkey-label" class="form-label">Please name this Passkey</label>
