--- a/server/core/templates/user_settings_profile_partial.html
+++ b/server/core/templates/user_settings_profile_partial.html
@@ -19,7 +19,9 @@ Profile
     (% if can_rw %)
         <button class="btn btn-primary" type="button" hx-post="/ui/api/user_settings/edit_profile">Edit</button>
     (% else %)
-        <button class="btn btn-primary" type="button" hx-post="/ui/reauth">Unlock Edit 🔒</button>
+        <a href="/ui/reauth" hx-boost="false">
+            <button class="btn btn-primary" type="button">Unlock Edit 🔒</button>
+        </a>
     (% endif %)
 (% endblock %)
 
