--- a/server/core/templates/credentials_reset_form.html
+++ b/server/core/templates/credentials_reset_form.html
@@ -2,8 +2,14 @@
 
 (% block title %)Reset Credentials(% endblock %)
 
+(% block head %)
+<!-- TODO: janky preloading them here because I assumed htmx swapped new scripts in on boosted requests, we can replace navigation to cred update with a full redirect later, and clean this up then -->
+<script src="/pkg/external/cred_update.js"></script>
+<script src="/pkg/external/base64.js" async></script>
+(% endblock %)
+
 (% block body %)
-<main class="flex-shrink-0 container form-signin">
+<main class="flex-shrink-0 container form-signin" id="cred-reset-form">
     <center>
         <img src="/pkg/img/logo-square.svg" alt="Kanidm" class="kanidm_logo"/>
         <h2>Credential Reset</h2>
@@ -28,10 +34,16 @@
     </form>
     <p class="d-flex flex-row flex-wrap justify-content-between">
         <button class="btn btn-secondary" aria-label="Return home"
-                hx-get="/ui/apps" hx-target="body" hx-select="body" hx-swap="outerHTML">
+                hx-get="/ui/apps" hx-target="#cred-reset-form" hx-select="#cred-reset-form" hx-swap="outerHTML">
             Return to the home page
         </button>
-        <button class="btn btn-primary" hx-get="/ui/reset" hx-include="#token" hx-target="body" hx-select="body" hx-swap="outerHTML" type="submit" >Submit</button>
+        <button class="btn btn-primary"
+                hx-get="/ui/reset"
+                hx-include="#token"
+                hx-target="#cred-reset-form" hx-select="#cred-reset-form" hx-swap="outerHTML"
+                type="submit">
+            Submit
+        </button>
     </p>
 </main>
 (% endblock %)
