--- a/server/core/templates/credentials_update_primary.html
+++ b/server/core/templates/credentials_update_primary.html
@@ -34,7 +34,7 @@
                 </p>
                 <br/>
                 <p>
-                    <button type="button" class="btn btn-warning" hx-post="/ui/reset/delete_alt_creds">
+                    <button type="button" class="btn btn-danger" hx-post="/ui/api/delete_alt_creds" hx-confirm="Delete your Password and any associated MFA?\nNote: this will not remove Passkeys.">
                         Delete Alternative Credentials
                     </button>
                 </p>
@@ -60,19 +60,21 @@
                 </p>
                 <br/>
                 <p>
-                    <button type="button" class="btn btn-warning" hx-post="/ui/reset/delete_alt_creds">
+                    <button type="button" class="btn btn-danger" hx-post="/ui/api/delete_alt_creds" hx-confirm="Delete your Password and any associated MFA?
+                    Note: this will not remove Passkeys.">
                         Delete Alternative Credentials
                     </button>
                 </p>
             (% when Some(CredentialDetail { uuid, type_: kanidm_proto::internal::CredentialDetailType::GeneratedPassword }) %)
                 <h6><b>Password</b></h6>
                 <p>In order to set up alternative authentication methods, you must delete the generated password.</p>
-                <button type="button" class="btn btn-danger" hx-post="/ui/reset/delete_alt_creds" >
+                <button type="button" class="btn btn-danger" hx-post="/ui/api/delete_alt_creds" >
                     Delete Generated Password
                 </button>
             (% when Some(CredentialDetail { uuid, type_: kanidm_proto::internal::CredentialDetailType::Passkey(_) }) %)
                 <p>Webauthn Only - Will migrate to passkeys in a future update</p>
-                <button type="button" class="btn btn-danger" hx-post="/ui/reset/delete_alt_creds" hx-confirm="Delete your Password and any associated MFA?\nNote: this will not remove Passkeys.">
+                <button type="button" class="btn btn-danger" hx-post="/ui/api/delete_alt_creds" hx-confirm="Delete your Password and any associated MFA?
+                Note: this will not remove Passkeys.">
                     Delete Alternative Credentials
                 </button>
             (% when None %)
@@ -82,7 +84,8 @@
         (% endmatch %)
     (% else if matches!(primary_state, CUCredState::DeleteOnly) %)
         <p>
-            <button type="button" class="btn btn-warning" hx-post="/ui/reset/delete_legacy_creds">
+            <button type="button" class="btn btn-warning" hx-post="/ui/api/delete_alt_creds" hx-confirm="Delete your Password and any associated MFA?
+            Note: this will not remove Passkeys.">
                 Delete Legacy Credentials
             </button>
         </p>
