fix missing navbar

--- a/server/core/templates/credentials_reset_form.html
+++ b/server/core/templates/credentials_reset_form.html
@@ -33,8 +33,7 @@
         </div>
     </form>
     <p class="d-flex flex-row flex-wrap justify-content-between">
-        <button class="btn btn-secondary" aria-label="Return home"
-                hx-get="/ui/apps" hx-target="#cred-reset-form" hx-select="#cred-reset-form" hx-swap="outerHTML">
+        <button class="btn btn-secondary" aria-label="Return home" hx-get="/ui" hx-target="body">
             Return to the home page
         </button>
         <button class="btn btn-primary"
