--- a/server/core/templates/credentials_update_partial.html
+++ b/server/core/templates/credentials_update_partial.html
@@ -90,7 +90,7 @@
         <hr class="my-4"/>
 
         <div class="d-flex flex-row flex-wrap justify-content-between">
-            <button class="btn btn-danger btn-lg" hx-post="/ui/api/cu_cancel">Cancel</button>
+            <button class="btn btn-danger btn-lg" hx-post="/ui/api/cu_cancel" hx-target="body">Cancel</button>
             <span class="d-inline-block" tabindex="0" data-bs-toggle="tooltip" data-bs-title="Resolve the warnings at the top.">
                 <button
                         class="btn btn-success btn-lg"
