fix double footer and header

--- a/server/core/templates/cred_update/add_password_partial.html
+++ b/server/core/templates/cred_update/add_password_partial.html
@@ -50,7 +50,7 @@
         </div>
     </form>
     <div class="g-3 d-flex justify-content-end" hx-target="#credentialUpdateDynamicSection">
-        <button id="password-cancel" type="button" class="btn btn-danger me-2" hx-get="/ui/reset">Cancel</button>
+        <button id="password-cancel" type="button" class="btn btn-danger me-2" hx-get="/ui/reset" hx-target="body">Cancel</button>
         <button id="password-submit" type="button" class="btn btn-primary"
                 hx-post="/ui/reset/add_password"
                 hx-include="#newPasswordForm"
